[GTK][WPE] Inclusion of OpenGLShims.h should not depend on USE(GLX) https://bugs.webkit.org/show_bug.cgi?id=236593

Reviewed by Michael Catanzaro.

Source/WebCore:

No new tests needed.

* platform/graphics/GLContext.cpp: Remove inclusion of OpenGLShims.h guarded by USE(GLX).
* platform/graphics/GLContext.h: Include OpenGLShims.h as fallback option when neither
USE(LIBEPOXY) nor USE(OPENGL_ES) are into effect.

Source/WebKit:

* UIProcess/API/glib/WebKitProtocolHandler.cpp: Move inclusion of GL/glx.h under a
PLATFORM(X11) guard, and inclusion of WebCore/OpenGLShims.h into a chain of guards
which picks it if USE(LIBEPOXY) and USE(OPENGL_ES) are both false, which is the same
checks done in other parts of the code where these are needed.



Canonical link: https://commits.webkit.org/247260@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289795 268f45cc-cd09-0410-ab3c-d52691b4dbfc