Source/WebCore/platform/graphics/GLContext.cpp
@@ -31,7 +31,6 @@
 
 #if USE(GLX)
 #include "GLContextGLX.h"
-#include "OpenGLShims.h"
 #endif
 
 namespace WebCore {
