Source/WebCore/platform/graphics/GLContext.h
@@ -28,6 +28,8 @@
 #include <epoxy/gl.h>
 #elif USE(OPENGL_ES)
 #include <GLES2/gl2.h>
+#else
+#include "OpenGLShims.h"
 #endif
 
 #if USE(EGL) && !PLATFORM(GTK)
